--- a/scripts/eda/data_cleaning.ipynb
+++ b/scripts/eda/data_cleaning.ipynb
@@ -7,22 +7,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from google.cloud import storage\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a0a4696",
+   "id": "b9b0e446",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/raw/heart-disease-dataset.csv')"
+    "# Establecer la ruta del archivo de credenciales\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"../../cloud/proyecto2-462217-118002bf0caf.json\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a618d0a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = \"mi-bucket-heartdata\"\n",
+    "blob_path = \"data/heart-disease-dataset.csv\"\n",
+    "file_path = f\"gs://{bucket_name}/{blob_path}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7a0a4696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "4f374dc8",
    "metadata": {},
    "outputs": [
@@ -157,7 +182,7 @@
        "4          0.0           122.0              0.0      0.0       1.0     0.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,73 +192,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "74822c9c",
+   "cell_type": "markdown",
+   "id": "4cecf96f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "613dce59a3d24d46bc58494a11637b39",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f435bb84e04c5b9536076b6a3b8eb5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77ba4019d58c4e998bc9ea8ae7fe002a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3cb2c91ac934975b04a1e41a0494c3e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from ydata_profiling import ProfileReport   \n",
-    "\n",
-    "profile = ProfileReport(df, title=\"Heart Disease Dataset Profiling Report\", explorative=True)\n",
-    "profile.to_file(\"../../documentacion/EDA_heart_disease_dataset.html\")"
+    "Eliminamos datos duplicados"
    ]
   },
   {
@@ -243,25 +206,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import storage\n",
-    "import os"
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f5c5334",
+   "metadata": {},
+   "source": [
+    "Eliminamos outliers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b268f55",
+   "id": "42284f27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Establecer la ruta del archivo de credenciales\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"../../cloud/proyecto2-462217-118002bf0caf.json\""
+    "# Filtrado de outliers basado en rangos definidos\n",
+    "df_clean = df[\n",
+    "    (df['age'] >= 18) & (df['age'] <= 100) &\n",
+    "    (df['resting_bp_s'] >= 90) & (df['resting_bp_s'] <= 210) &\n",
+    "    (df['cholesterol'] >= 100) & (df['cholesterol'] <= 700) &\n",
+    "    (df['max_heart_rate'] >= 60) & (df['max_heart_rate'] <= 220) &\n",
+    "    (df['oldpeak'] >= 0) & (df['oldpeak'] <= 6)\n",
+    "].copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c96d2be",
+   "id": "85625506",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(743, 12)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "df108caa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar el DataFrame limpio en un nuevo archivo CSV\n",
+    "df_clean.to_csv(\"../../data/clean/clean_heart-disease-dataset.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a4b67124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,52 +292,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2edd92cd",
+   "execution_count": 12,
+   "id": "4cbc98eb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo ../../data/raw/heart-disease-dataset.csv subido a gs://mi-bucket-heartdata/data/heart-disease-dataset.csv\n"
+      "Archivo ../../data/clean/clean_heart-disease-dataset.csv subido a gs://mi-bucket-heartdata/data/clean_heart-disease-dataset.csv\n"
      ]
     }
    ],
    "source": [
     "upload_csv_to_bucket(\n",
     "    bucket_name=\"mi-bucket-heartdata\",\n",
-    "    source_file_path=\"../../data/raw/heart-disease-dataset.csv\",\n",
-    "    destination_blob_name=\"data/heart-disease-dataset.csv\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "91024aa5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archivo ../../documentacion/EDA_heart_disease_dataset.html subido a gs://mi-bucket-heartdata/ProfileReport/EDA_heart_disease_dataset.html\n"
-     ]
-    }
-   ],
-   "source": [
-    "upload_csv_to_bucket(\n",
-    "    bucket_name=\"mi-bucket-heartdata\",\n",
-    "    source_file_path=\"../../documentacion/EDA_heart_disease_dataset.html\",\n",
-    "    destination_blob_name=\"ProfileReport/EDA_heart_disease_dataset.html\"\n",
+    "    source_file_path=\"../../data/clean/clean_heart-disease-dataset.csv\",\n",
+    "    destination_blob_name=\"data/clean_heart-disease-dataset.csv\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af15a17d",
+   "id": "7a2d8b49",
    "metadata": {},
    "outputs": [],
    "source": []
