--- a/scripts/modeling/modeling_pedro.ipynb
+++ b/scripts/modeling/modeling_pedro.ipynb
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "3b3b008e",
    "metadata": {},
    "outputs": [
@@ -2152,16 +2152,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "1539e702",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def upload_csv_to_bucket(bucket_name, source_file_path, destination_blob_name):\n",
+    "    \"\"\"\n",
+    "    Sube un archivo CSV a un bucket de GCP.\n",
+    "\n",
+    "    bucket_name: nombre del bucket (str)\n",
+    "    source_file_path: ruta local del archivo CSV (str)\n",
+    "    destination_blob_name: nombre con el que se guardará en el bucket (str)\n",
+    "    \"\"\"\n",
+    "    storage_client = storage.Client()\n",
+    "    bucket = storage_client.bucket(bucket_name)\n",
+    "    blob = bucket.blob(destination_blob_name)\n",
+    "\n",
+    "    blob.upload_from_filename(source_file_path)\n",
+    "\n",
+    "    print(f\"Archivo {source_file_path} subido a gs://{bucket_name}/{destination_blob_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "4d0e9040",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../../data/clean/clean_heart-disease-dataset.csv subido a gs://mi-bucket-heartdata/data/synthetic_heart-disease-dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "upload_csv_to_bucket(\n",
+    "    bucket_name=\"mi-bucket-heartdata\",\n",
+    "    source_file_path=\"../../data/clean/clean_heart-disease-dataset.csv\",\n",
+    "    destination_blob_name=\"data/synthetic_heart-disease-dataset.csv\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d0e9040",
+   "id": "f8e7a629",
    "metadata": {},
    "outputs": [],
    "source": []
