--- a/scripts/eda/data_cleaning.ipynb
+++ b/scripts/eda/data_cleaning.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0b338660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install google-cloud-storage fsspec gcsfs pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "82f18748",
    "metadata": {},
